@@ -20,6 +20,7 @@
 * minus resists mean it not only doesn't decrease damage, it increases damage (this is a penetration buff)
 * phys and ele attack damages now have number ranges (would you believe me if i told you this took about 10 hours to accomplish without bugtesting afterwards?)
 * trimmed down tiers from 20 to 5. The difficulty spike should be felt now.
+* most gear can now get elemental resists as secondary stats
 
 3.4.2
 * creative players can now destroy dungeon blocks and place them.
